src/test/resources/invalid_tests/MissingFullyConnectedArgument.cnna
architecture MissingFullyConnectedArgument{
    def input in
    def output out
    
    in ->
    fullyConnected(no_bias=true)
    output{
        fullyConnected()
        activation.softmax()
    } -> out
}